--- a/css/style.css
+++ b/css/style.css
@@ -335,9 +335,48 @@ body {
 	padding: 0;
 }
 
+.copyrightSection {
+    background-color: #000;
+    color: #fff;
+    padding: 30px 5px;
+}
 
+.copyrightSection p {
+    margin: 0;
+}
 
+#navigation {
+    background-color: #e74c3c;
+    padding: 20px 10px;
+    z-index: 100;
+}
 
+#navigation li {
+    padding: 0 10px;
+}
+
+#navigation li a {
+    color: #fff;
+}
+
+.navbar-brand,
+.navbar_brand:hover {
+    color: #fff;
+}
+
+.navbar-toggler-icon {
+    color: #fff;
+    font-size: 3rem;
+    text-align: center;
+    width: 100%;
+    height: 100%;
+}
+
+.fixedNav #navigation {
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
 
 
 
