--- a/css/style.css
+++ b/css/style.css
@@ -378,5 +378,20 @@ body {
     width: 100%;
 }
 
+.loader {
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    z-index: 1000;
+}
+
+.loader .inner {
+    width: 100%;
+    height: 100%;
+    background: url(../img/loader.gif) center center no-repeat;
+}
 
 
